@@ -339,6 +339,17 @@
       </component>
     </version>
   </module>
+  <module name="evolution-data-server">
+    <version release="gnome-2.6">
+      <component name="evolution-data-server" dir="evolution-data-server" group="extras">
+	<podir dir="po"/>
+	<potname name="evolution-data-server-1.5.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="evolution-groupwise">
     <version release="gnome-2.6">
       <component name="evolution-groupwise" dir="evolution-groupwise" group="extras">
