@@ -1,3 +1,7 @@
+2003-12-17  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added evolution-data-server.
+
 2003-12-16  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added gnome-keyring.
